<?xml version="1.0"?>
<package>
  <name>apriltag2_ros</name>
  <version>0.0.0</version>
  <description>The apriltag2_ros package</description>

  <maintainer email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</maintainer>

  <license>TODO</license>
  <author email="kumarsha@cs.cmu.edu">Kumar Shaurya Shankar</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>OpenCV</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>apriltag2</build_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>Eigen3</run_depend>
  <run_depend>apriltag2</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>apriltag_mit</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>apriltag_mit</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
